Compiler/tests/semantics/fail/inconformidad_tipos_retorno.java
/*
Falla en la linea: 10
El tipo de la expresion retornada el el metodo testMethod no conforma a su tipo de retorno.
*/

class Test {

	dynamic String testMethod()
	{
		return 777;
	}
	
	static void main(){
		
	}

}
